--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 4fr 2fr;
   align-items: center;
   gap: 1.5rem;
-  
+
   @media screen and (max-width: $breakpoint-small) {
     padding-top: 2rem;
     grid-template-columns: 1fr;
@@ -20,16 +20,17 @@ p.hero-description {
   line-height: 1.6;
   color: var(--font-color-muted);
   font-weight: 500;
-  
+
   .hero-link {
-    text-decoration: none;
-    
-    &:hover {
+    font-weight: 700;
+    text-decoration: underline;
+
+    &:hover,
+    &:active {
       color: var(--color-primary-dark);
-      text-decoration: underline 2px;
     }
   }
-  
+
   @media screen and (max-width: $breakpoint-small) {
     margin: 1rem 0;
     font-size: 1.1rem;
@@ -38,7 +39,7 @@ p.hero-description {
 
 .hero-component {
   order: 1;
-  
+
   @media screen and (max-width: $breakpoint-small) {
     order: 2;
   }
@@ -49,7 +50,7 @@ p.hero-description {
   align-items: center;
   order: 2;
   justify-content: flex-end;
-  
+
   @media screen and (max-width: $breakpoint-small) {
     display: none;
     order: 1;
@@ -61,20 +62,20 @@ p.hero-description {
   display: grid;
   gap: 1.5rem;
   grid-template-columns: repeat(3, 1fr);
-  
+
   > div {
     flex: 1;
   }
-  
+
   a.button {
     font-size: 0.9rem;
     padding: 0.5rem 0.75rem;
-    
+
     @media screen and (max-width: $breakpoint-small) {
       padding: 0.5rem 0.6rem;
     }
   }
-  
+
   @media screen and (max-width: $breakpoint-small) {
     grid-template-columns: 1fr;
   }
@@ -84,7 +85,7 @@ p.hero-description {
   animation: rotateOnce 1.2s cubic-bezier(0.25, 1, 0.5, 1) 1;
   width: 200px;
   max-width: 200px;
-  
+
   @media screen and (max-width: $breakpoint-small) {
     max-width: 100px;
   }
