--- a/src/app/pages/post-detail/post-detail.component.scss
+++ b/src/app/pages/post-detail/post-detail.component.scss
@@ -18,7 +18,6 @@
         color: var(--font-color-muted);
         font-weight: 700;
         text-decoration: underline;
-        transition: all 0.3s ease-in-out;
       
         &:hover,
         &:active {
